2002-02-01  Hans-Bernhard Broeker  <broeker@physik.rwth-aachen.de>

	* term/README: Corrected type of last argument of term->arrow()
	Re-indented a bit.
	
2001-02-01  Hans-Bernhard Broeker  <broeker@physik.rwth-aachen.de>

	* src/win/pgnuplot.c: Added comment about -mno-cygwin option to be
 	used to avoid GPLification of pgnuplot by use of Cygwin's DLL.

	* config/makefile.cyg (pgnuplot.exe): Added rule to build the
 	helper program.
	(default, all): Added dependencies on pgnuplot.exe.
	(install): Added command to install pgnuplot.exe, too.

	* config/makefile.mgw (install): Also install pgnuplot.exe.

2002-01-31  Petr Mikulik  <mikulik@physics.muni.cz>

	* demo/all.dem demo/pm3d.dem demo/clip14in.dat demo/triangle.dat:
 	New files for pm3d demo.

	* pm3d/demo: Directory removed (contents merged with demo/).

2002-01-31  Lars Hecking  <lhecking@nmrc.ucc.ie>

	* src/contour.c(chk_contour_kind): Remove unnecessary FPRINTF
	statements.

	* src/gplt_x11.c, term/x11.trm: Cleaning up, indentation, ANSIfication.

	* src/plot.c(main): Fix two minor bugs which only show if neither
	atexit() nor on_exit() are available.

	* src/util.c(os_error): Replace fprintf errno with perror().

2002-01-30  Petr Mikulik  <mikulik@physics.muni.cz>

	* pm3d/demo/pm3dColumn.gpi: Use 'set term push/pop' and close
	output data file.

2002-01-29  Lars Hecking  <lhecking@nmrc.ucc.ie>

	* INSTALL, README: Fix references to distribution files.

	* configure.in: Fix libpng and libpdf tests so that these libraries
	are always searched for. Remove "EXPERIMENTAL" notice for pdf driver.
	Clean fix for non-zero exit code problem.

2002-01-28  Hans-Bernhard Broeker  <broeker@physik.rwth-aachen.de>

	* src/graph3d.c (plot3d_lines_pm3d): Fix line misordering in
 	color_axis handling.

2002-01-27  Johannes Zellner  <johannes@zellner.org>
	* term/ggi.trm: Remove stdin buffering like in x11.

2002-01-27  Hans-Bernhard Broeker  <broeker@physik.rwth-aachen.de>
